# epic-battle-db

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  run.sh  runBenchmarks.sh  runWin.sh
SAP-Hana-Scripts/: benchmarking.py  config_to_be_copied.py  connector.py  createDB.py  createInsertData.py
sources/: columnStoreTable.cpp  columnStoreTable.h  positionList.h  rowStoreTable.cpp  rowStoreTable.h  table.cpp  table.h  timer.h
tests/: benchmark_insert.cpp  benchmark_scan.cpp  benchmark_thread.cpp  benchmark_threadSame.cpp  benchmark_threads.cpp  benchmark_update.cpp  benchmark_updateLess.cpp  benchmark_updateRandom.cpp  create.cpp  insert.cpp  materialize.cpp  scan.cpp  tests.cpp  threads.cpp  update.cpp
tests/results/: diagrams.xlsx  times_insert_1.csv  times_insert_2.csv  times_insert_3.csv  times_insert_4.csv  times_insert_5.csv  times_scan_1.csv  times_scan_2.csv  vm-results.xlsx  ~$diagrams.xlsx
tests/results/O2/: times_insert.csv  times_scan.csv
tests/results/O3/: times_insert.csv  times_scan.csv
